@@ -1,11 +1,12 @@
 package com.anma.conflappcore.rest.contr;
 
-import com.anma.conflappcore.models.ContentWeb;
-import com.anma.conflappcore.models.db.Page;
+import com.anma.conflappcore.models.dto.ContentDto;
+import com.anma.conflappcore.models.db.WikiPage;
 import com.anma.conflappcore.repo.PageRepo;
-import com.anma.conflappcore.rest.dto.ContentType;
-import com.anma.conflappcore.rest.dto.PageDTO;
+import com.anma.conflappcore.models.dto.ContentType;
+import com.anma.conflappcore.models.dto.PageDto;
 import com.anma.conflappcore.rest.req.CreatePageReq;
+import com.anma.conflappcore.srv.ContentMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -24,53 +25,40 @@ import java.util.stream.Collectors;
 public class PageRest {
     private static final Logger LOG = LoggerFactory.getLogger(PageRest.class);
     private final PageRepo pageRepo;
-   
+
     @Autowired
     public PageRest(PageRepo pageRepo) {
         this.pageRepo = pageRepo;
     }
 
     @GetMapping()
-    public List<Page> getPages(
-            @RequestParam String spaceKey,
-            @RequestParam String title) {
-        if (!spaceKey.isEmpty()) {
-            return pageRepo.findBySpaceKey(spaceKey);
-        }
-
-        if (!title.isEmpty()) {
-            return pageRepo.findByTitle(title);
-        }
-        return pageRepo.findAll().stream().limit(10000).collect(Collectors.toList());
+    public List<ContentDto> getPages() {
+        return pageRepo.findAll().stream().limit(10000)
+                .map(ContentMapper::contentDto).toList();
     }
 
     @GetMapping("/space/{space}")
-    public List<Page> getSpacePages(@PathVariable String space, @RequestParam(defaultValue = "300") int limit) {
-        return pageRepo.findBySpaceKey(space).stream().limit(limit).collect(Collectors.toList());
+    public List<ContentDto> getSpacePages(@PathVariable String space, @RequestParam(defaultValue = "300") int limit) {
+        return pageRepo.findBySpaceKey(space).stream().limit(limit)
+                .map(ContentMapper::contentDto)
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/{id}")
-    public ContentWeb getPageById(@PathVariable long id) {
-        Page page = pageRepo.getById(id);
-        var content = new ContentWeb(id, page.getTitle(),
-                ContentType.PAGE.name(),
-                page.getBody(),
-                page.getSpaceKey(),
-                String.valueOf(page.getId()),
-                page.getCreatedAt(),
-                page.getLastUpdated());
-        return content;
+    public ContentDto getPageById(@PathVariable long id) {
+        WikiPage page = pageRepo.findById(id).orElseThrow(() -> new RuntimeException("No page with id " + id));
+        return ContentMapper.contentDto(page);
     }
 
     @GetMapping("/{key}/{title}")
-    public ContentWeb getPageBySpacekeyAndTitle(@PathVariable String key, @PathVariable String title) {
-        LOG.warn(">> getPageBySpacekeyAndTitle");
-        LOG.warn(">> key: " + key);
-        LOG.warn(">> title: " + title);
-        Page page = pageRepo.findByTitleAndSpaceKey(title, key);
-        LOG.warn(page.toString());
-
-        var content = new ContentWeb(
+    public ResponseEntity<ContentDto> getPageBySpacekeyAndTitle(
+            @PathVariable String key, @PathVariable String title) {
+        LOG.info(">> getPageBySpacekeyAndTitle");
+        LOG.info(">> key: " + key);
+        LOG.info(">> title: " + title);
+        WikiPage page = pageRepo.findByTitleAndSpaceKey(title, key);
+        LOG.info(page.toString());
+        var content = new ContentDto(
                 page.getId(),
                 page.getTitle(),
                 ContentType.PAGE.name(),
@@ -79,35 +67,35 @@ public class PageRest {
                 String.valueOf(page.getId()),
                 page.getCreatedAt(),
                 page.getLastUpdated());
-        return content;
+        return ResponseEntity.status(200).body(content);
     }
 
     @PostMapping
-    public Page createPage( @RequestBody CreatePageReq dto) {
-        var page = new Page();
+    public ContentDto createPage(@RequestBody CreatePageReq dto) {
+        var page = new WikiPage();
         page.setBody(dto.body());
         page.setTitle(dto.title());
         page.setCreatedAt(LocalDateTime.now());
-        page.setAuthorId(new Random().nextInt(1,5)); // todo
+        page.setAuthorId(new Random().nextInt(1, 5)); // todo
         page.setSpaceKey(dto.spaceKey());
-        return pageRepo.save(page);
+        return ContentMapper.contentDto(pageRepo.save(page));
     }
 
     @PutMapping("/{id}")
     @ResponseStatus(HttpStatus.ACCEPTED)
-    public PageDTO savePage(@PathVariable long id, @RequestBody CreatePageReq dto) {
+    public PageDto savePage(@PathVariable long id, @RequestBody CreatePageReq dto) {
         var edited = pageRepo.getById(id);
         edited.setTitle(dto.title());
         edited.setBody(dto.body());
-        Page savedPage = pageRepo.save(edited);
-        return new PageDTO(savedPage.getId(), savedPage.getTitle(), savedPage.getBody(), savedPage.getSpaceKey());
+        WikiPage savedPage = pageRepo.save(edited);
+        return new PageDto(savedPage.getId(), savedPage.getTitle(), savedPage.getBody(), savedPage.getSpaceKey());
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<?> deletePage(@PathVariable long id) {
         pageRepo.deleteById(id);
         return ResponseEntity
-            .status(HttpStatus.NO_CONTENT)
-            .body("Deleted workout with id = " + id);
+                .status(HttpStatus.NO_CONTENT)
+                .body("Deleted workout with id = " + id);
     }
 }
